--- a/package.json
+++ b/package.json
@@ -71,5 +71,15 @@
     "prisma": "6.13.0",
     "tailwindcss": "3.4.10",
     "typescript": "5.5.4"
+  },
+  "pnpm": {
+    "allowedBuiltDependencies": [
+      "@prisma/client",
+      "@prisma/engines",
+      "prisma",
+      "@sentry/cli",
+      "msgpackr-extract",
+      "unrs-resolver"
+    ]
   }
 }
