fix: remove prisma migrate from build script for Vercel deployment

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 3000",
-    "build": "prisma migrate deploy && next build",
+    "build": "next build",
     "start": "next start -p 3000",
     "postinstall": "prisma generate",
     "lint": "next lint",
