perf: implementar otimizações completas de performance - imagens comprimidas, lazy loading, cache inteligente, throttling de eventos

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,9 @@
       ],
       "@/contexts/*": [
         "./src/contexts/*"
+      ],
+      "@/hooks/*": [
+        "./src/hooks/*"
       ]
     },
     "plugins": [
